@@ -1,4 +1,6 @@
 1.2.2
+ * fix potential for multiple concurrent compactions of the same sstables
+   (CASSANDRA-5256)
  * avoid no-op caching of byte[] on commitlog append (CASSANDRA-5199)
  * fix symlinks under data dir not working (CASSANDRA-5185)
  * fix bug in compact storage metadata handling (CASSANDRA-5189)
